# ProtDSL

./: .gitignore  CMakeLists.txt  README.md  main.rb
Generic/: base.rb  builder.rb  scope.rb  shared.rb  var.rb
Sim/: cpu_state.rb  decoder.rb  executor.rb  opcode.rb  util.rb
Sim/Lib/: instruction.h  main.cpp  mem.cpp  mem.h  syscall.h  target.cpp  util.cpp  util.h
examples/: fib.s  hello.s
